--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2",
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
+    "body-parser": "^1.20.2"
+  }
 }
